# Cal_PnP

./: CMakeLists.txt  README.md
data/: calibration.txt  cfg.json
src/: CamCal.cpp  CamCal.h  Cfg.cpp  Cfg.h  main.cpp
